--- a/DiffAssertions/DiffAssertions.nuspec
+++ b/DiffAssertions/DiffAssertions.nuspec
@@ -21,6 +21,6 @@
   </metadata>
   <files>
     <file src="lib\netstandard2.0\DiffAssertions.dll" target="lib\netstandard2.0\DiffAssertions.dll" />
-    <file src=".\NuGet\diff-assertions.json" target="" />
+    <file src="diff-assertions.json" target="" />
   </files>
 </package>
