Updated so that the config file should be placed in the nuget package Content folder

--- a/DiffAssertions/DiffAssertions.csproj
+++ b/DiffAssertions/DiffAssertions.csproj
@@ -22,7 +22,7 @@ You can easily create a file that contains the expected result (your specificati
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="diff-assertions.json" Pack="true" PackagePath="diff-assertions.json" />
+    <None Include="diff-assertions.json" Pack="true" PackagePath="Content/diff-assertions.json" />
   </ItemGroup>
 
 </Project>
