--- a/DiffAssertions/DiffAssertions.csproj
+++ b/DiffAssertions/DiffAssertions.csproj
@@ -22,7 +22,9 @@ You can easily create a file that contains the expected result (your specificati
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="diff-assertions.json" Pack="true" PackagePath="Content/diff-assertions.json" />
+    <None Include="diff-assertions.json" Pack="true" PackagePath="Content/diff-assertions.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
