Added support handling running tests on build server. Enabled XML documentation

--- a/DiffAssertions.Tests/DiffAssertions.Tests.csproj
+++ b/DiffAssertions.Tests/DiffAssertions.Tests.csproj
@@ -28,6 +28,9 @@
     <None Update="diff-assertions.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="DiffAssertTests\BuildServerTest.expected.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
