Changes the default usage of equals when using xUnit 2 to ignoreLineEndingDifferences

--- a/DiffAssertions.Tests/DiffAssertions.Tests.csproj
+++ b/DiffAssertions.Tests/DiffAssertions.Tests.csproj
@@ -37,6 +37,9 @@
     <None Update="DiffAssertTests\LocalDiffTest.expected.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="DiffAssertTests\FileWithNonWindowsLineEnding.expected.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
