Expected files in different folders within the working directory can now share the same name

--- a/DiffAssertions.Tests/DiffAssertions.Tests.csproj
+++ b/DiffAssertions.Tests/DiffAssertions.Tests.csproj
@@ -42,4 +42,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DiffAssertTests\Directory1\" />
+    <Folder Include="DiffAssertTests\Directory2\" />
+  </ItemGroup>
+
 </Project>
