Makes sure that expected files are copied to output directory.

--- a/DiffAssertions.Tests/DiffAssertions.Tests.csproj
+++ b/DiffAssertions.Tests/DiffAssertions.Tests.csproj
@@ -43,6 +43,12 @@
     <None Update="DiffAssertTests\FileWithNonWindowsLineEnding.expected.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="DiffAssertTests\Directory1\FileWithSameNameAsOtherInDifferentDirectory.expected.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="DiffAssertTests\Directory2\FileWithSameNameAsOtherInDifferentDirectory.expected.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
