--- a/DiffAssertions/DiffAssertions.csproj
+++ b/DiffAssertions/DiffAssertions.csproj
@@ -19,6 +19,8 @@ You can easily create a file that contains the expected result (your specificati
     <RepositoryType>Git</RepositoryType>
     <PackageLicenseUrl>https://github.com/patrik-olausson/TestHelpers.DiffAssertions/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/patrik-olausson/TestHelpers.DiffAssertions</PackageProjectUrl>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <FileVersion>2.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
